[package]
name = "fx_book_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
egui_extras = "0.32.0"
egui_grid = "0.5.1"
rand = "0.9.1"
futures = "0.3"
tokio = { version = "1", default-features = false, features = [
    "fs",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1"
chrono = "0.4.41"
log = "0.4"
log4rs = "1"